# tugofwords

contract/: Move.toml
contract/sources/: contract.move
contract/tests/: contract_tests.move
frontend/src/: App.jsx  index.css
frontend/src/screens/: EndScreen.jsx  GameScreen.jsx  StartScreen.jsx  WaitingRoom.jsx  createflow.jsx  joinflow.jsx  overlay.jsx  start.jsx
game/: package-lock.json  package.json
game/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  utils.ts  wsproviders.tsx
game/src/app/game/[id]/: page.tsx
game/src/app/lobby/: page.tsx
game/src/app/store/: useWalletStore.ts  ws.ts
game/src/app/types/: game.ts
offchain/: Cargo.toml
offchain/src/: consts.rs  game.rs  main.rs  utils.rs
