[package]
name = "offchain"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "6.1.0"
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
futures-util = { version = "0.3" }
tower-http = { version = "0.6.6", features = ["cors"] }
